Starting to get homepage up and running. Main area and client section done

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,20 @@
-.container
-  .logo
-    = image_tag 'logo.png'
+%section.main
+  .container
+    %h1.center.large-margin We are the creative experts
+    .icon
+      %i.icon-brush
+      %span Design
+    .icon
+      %i.icon-wifi
+      %span Web
+    .icon
+      %i.icon-moviereel
+      %span Video
 
-%span Coming soon
+%section
+  %h1.center.large-margin Some of our clients
+  .clients
+    .client-item.marriott
+    .client-item.mersive
+    .client-item.huhot
+    .client-item.bodyfuel
