--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -12,6 +12,12 @@
       %span Video
 
 %section
+  %h1.center.large-margin Some of our video work
+  .player
+    = link_to 'http://player.vimeo.com/video/58398642?title=0&amp;byline=0&amp;portrait=0&amp;autoplay=true' do
+      %img{ src: 'http://b.vimeocdn.com/ts/405/290/405290102_960.jpg', width: 960, height: 539 }
+
+%section
   %h1.center.large-margin Some of our clients
   .clients
     .client-item.marriott
