--- a/app/assets/stylesheets/application/typography.scss
+++ b/app/assets/stylesheets/application/typography.scss
@@ -6,6 +6,7 @@ body {
   font-family: $header-font-family;
   color: inherit;
   text-transform: uppercase;
+  margin: 0;
   &.large-margin {
     margin-bottom: 100px;
   }
