--- a/app/assets/stylesheets/modules/tiles.scss
+++ b/app/assets/stylesheets/modules/tiles.scss
@@ -2,6 +2,7 @@
   width: 100%;
   text-align: center;
   clear: both;
+  @include clearfix;
   .client-item {
     border: 1px solid $border-color;
     @include box-sizing(border-box);
